Add service discovery with consul (Closes #5)
